--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,56 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 $text: red;
 
-body {
+html {
     font-family: roboto;
-    color: $text;
+    scroll-behavior: smooth;
+}
+
+body {
+    margin: 0;
+}
+
+h1 {
+    font-size: 2rem;
+    color: white;
+}
+
+section {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+}
+
+#sectionOne {
+    background-color: #2d8df8;
+}
+
+#sectionTwo {
+    background-color: #23232D;
+}
+
+button {
+    border: solid white 3px;
+    border-radius: 1rem;
+    padding: 1rem 2rem;
+    font-size: 1.6rem;
+    background-color: transparent;
+    color: white;
+    cursor: pointer;
+    transition: border .2s ease-in-out, color .2s ease-in-out;
+}
+
+button:hover {
+    color: #23232D;
+    border: solid #23232D 3px;
+}
+
+#Scene {
+    width: 90vw;
+    @media screen and (min-width: 480px) {
+        width: 40vw;
+    }
 }
